# legion-stage

./: .gitignore  CMakeLists.txt  build.bat  create-shortcut.ps1  run_build.bat
.claude/skills/session-workflow/: skill.md
assets/skills/session-workflow/: extend.md  layer.md  seed.md  shape.md
docs/: keystage-property-exchange.txt  keystage-resource-list.txt
docs/superpowers/plans/: 2026-03-25-audio-engine-foundation.md  2026-03-25-clip-sequencer.md  2026-03-25-midi-input.md  2026-03-25-vst3-plugin-hosting.md
docs/superpowers/specs/: 2026-03-25-clip-sequencer-design.md  2026-03-25-midi-input-design.md  2026-03-25-vst3-plugin-hosting-design.md
src/: ArturiaPresetScanner.h  ClipPlayerNode.cpp  ClipPlayerNode.h  CrashLog.h  DawLookAndFeel.h  GForceComponent.h  GainProcessor.cpp  GainProcessor.h  GamepadHandler.cpp  GamepadHandler.h  GamepadOverlayComponent.h  GeissComponent.h  KeystageLookAndFeel.h  LissajousComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  Midi2Handler.cpp  Midi2Handler.h  MidiCaptureBuffer.h  MidiClip.h  MilkDropComponent.h  MixerComponent.h  PianoRollComponent.cpp  PianoRollComponent.h  PluginHost.cpp  PluginHost.h  ProjectMComponent.h  QuickKeysHandler.cpp  QuickKeysHandler.h  SequencerEngine.cpp  SequencerEngine.h  SkillParser.h  SpectrumComponent.h  SplashComponent.h  TimelineComponent.cpp  TimelineComponent.h  TouchPianoComponent.h  TrackComponent.cpp  TrackComponent.h  (+5 more)
